stage-detail-v2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: details
  namespace: stg-bookinfo
  labels:
    app: details
    service: details
    version: v2
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: details
  type: ClusterIP
