vs-mirror-details.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: details
  namespace: prod-bookinfo
spec:
  hosts:
    - details.prod-bookinfo.svc.cluster.local
  http:
    - mirror:
        host: details-v2.prod-bookinfo.svc.aro-stg-mesh-imports.local
      route:
        - destination:
            host: details.prod-bookinfo.svc.cluster.local
            subset: v1
          weight: 100
